k8s/admin-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin-container
          image: hy30k/k8s-admin:fpj
          ports:
            - containerPort: 8000
          command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001  # NodePort 설정
  type: NodePort
